[package]
name = "moshpit"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asdf-pixel-sort = "0.2.0"
clap = { version = "4.3.8", features = ["derive"] }
clap-num = "1.0.2"
image = "0.23.14"
indoc = "2.0.1"
rand = "0.8.5"
